--- a/worldtree_front/package.json
+++ b/worldtree_front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "worldtree_back",
+  "name": "worldtree_front",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.7.4",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
