--- a/worldtree_front/package.json
+++ b/worldtree_front/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "axios": "^1.7.4",
     "core-js": "^3.8.3",
+    "echarts": "^5.5.1",
     "element-plus": "^2.8.0",
     "mockjs": "^1.1.0",
     "vue": "^3.2.13",
+    "vue-echarts": "^7.0.2",
     "vue-router": "^4.4.3",
     "vuex": "^4.0.2"
   },
