--- a/worldtree_front/package.json
+++ b/worldtree_front/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.2.13",
     "vue-echarts": "^7.0.2",
     "vue-router": "^4.4.3",
+    "vue3-quill": "^0.3.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
