--- a/worldtree_front/package.json
+++ b/worldtree_front/package.json
@@ -7,10 +7,16 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.4",
     "core-js": "^3.8.3",
     "echarts": "^5.5.1",
     "element-plus": "^2.8.0",
+    "font-awesome": "^4.7.0",
     "mockjs": "^1.1.0",
     "vue": "^3.2.13",
     "vue-echarts": "^7.0.2",
