--- a/worldtree_front/package.json
+++ b/worldtree_front/package.json
@@ -18,6 +18,7 @@
     "element-plus": "^2.8.0",
     "font-awesome": "^4.7.0",
     "mockjs": "^1.1.0",
+    "moment": "^2.30.1",
     "qrcode": "^1.5.4",
     "vue": "^3.2.13",
     "vue-echarts": "^7.0.2",
