--- a/transBackend/src/main/resources/application.yml
+++ b/transBackend/src/main/resources/application.yml
@@ -9,6 +9,11 @@ spring:
       host: localhost
       port: 6379
 
+# application.yml
+server:
+  port: 8080
+  address: 0.0.0.0
+
 
 mybatis:
   configuration:
