--- a/transBackend/src/main/resources/application.yml
+++ b/transBackend/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/worldtree
-    username: root
-    password: Hatsune Miku
+    url: jdbc:mysql://localhost:3306/worldtree2_db
+    username: worldtree2
+    password: WorldTreeII
   data:
     redis:
       host: localhost
