--- a/transBackend/src/main/resources/application.yml
+++ b/transBackend/src/main/resources/application.yml
@@ -2,10 +2,10 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/worldtree2_db
-#    username: root
-#    password: Hatsune Miku
-    username: worldtree2
-    password: WorldTreeII
+    username: root
+    password: Hatsune Miku
+#    username: worldtree2
+#    password: WorldTreeII
   data:
     redis:
       host: localhost
