--- a/transBackend/src/main/resources/application.yml
+++ b/transBackend/src/main/resources/application.yml
@@ -4,6 +4,7 @@ spring:
     url: jdbc:mysql://localhost:3306/worldtree2_db
 #    username: root
 #    password: Hatsune Miku
+#    url: jdbc:mysql://10.20.26.32:3306/worldtree2_db
     username: worldtree2
     password: WorldTreeII
   data:
