--- a/transBackend/pom.xml
+++ b/transBackend/pom.xml
@@ -119,6 +119,11 @@
       <artifactId>javax.json-api</artifactId>
       <version>1.1.4</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.10.1</version>
+    </dependency>
   </dependencies>
 
   <build>
